--- a/index.html
+++ b/index.html
@@ -1,13 +1,127 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>
+            Zen Cafe, Spa & Beauty
+        </title>
+        <meta content="" name="description">
+        <meta content="" name="author">
+        <meta content="" name="keywords">
+        <meta content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+        <!-- Journex v1.0 || ex nihilo || November 2018 -->
+        <!-- style start -->
+        <link href="css/plugins.css" media="all" rel="stylesheet" type="text/css">
+        <link href="css/style.css" media="all" rel="stylesheet" type="text/css"><!-- style end -->
+        <!-- google fonts start -->
+        <!-- <link href="http://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900%7COswald:300,400,700" rel="stylesheet" type="text/css"> -->
+        <!-- google fonts end -->
+        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Droid Sans:400,700","Great Vibes:400","Playwrite_VN_Guides:400"]  }});
+        </script>
+    </head>
+    <body>
+        <!-- preloader start -->
+        <div class="preloader-bg"></div>
+        <div id="preloader">
+            <div id="preloader-status">
+                <div class="preloader-position loader">
+                    <span></span>
+                </div>
+            </div>
+        </div><!-- preloader end -->
+        <!-- navigation start -->
+        <nav class="navbar navbar-fixed-top navbar-bg-switch">
+            <!-- container start -->
+            <div class="container-fluid">
+                <div class="navbar-header fadeIn-element">
+                    <!-- logo start -->
+                    <div class="logo">
+                        <a class="navbar-brand logo" href="#">
+                        <!-- logo light start -->
+                        <img alt="Logo" class="logo-light" src="img/logo-light.png"><!-- logo light end -->
+                        <!-- logo dark start -->
+                        <img alt="Logo" class="logo-dark" src="img/logo-dark.png"><!-- logo dark end --></a>
+                    </div><!-- logo end -->
+                </div>
+            </div><!-- container end -->
+        </nav><!-- navigation end -->
+        <!-- home section start -->
+        <section class="upper-page" id="home">
+            <!-- hero bg start -->
+            <div class="hero-fullscreen overlay overlay-dark-40-video">
+                <!-- YouTube video start -->
+                <div class="hero-bg hero-fullscreen-FIX">
+                    <!-- YouTube video containment start -->
+                    <div id="videoContainment">
+                        <!-- YouTube video URL start -->
+                        <div class="player" data-property=
+                        "{videoURL: 'DBEIfYc2C3A', containment: '#videoContainment', showControls: false, autoPlay: true, loop: true, vol: 50, mute: true, startAt: 0, stopAt: 0, opacity: 1, addRaster: false, quality: 'large', optimizeDisplay: true, ratio: 16/9}"
+                        id="bgndVideo"></div><!-- YouTube video URL end -->
+                    </div><!-- YouTube video containment end -->
+                    <!-- YouTube video mobile IMG start -->
+                    <div class="YT-bg"></div><!-- YouTube video mobile IMG end -->
+                </div><!-- YouTube video end -->
+            </div><!-- hero bg end -->
+            <!-- center container start -->
+            <div class="center-container">
+                <!-- center block start -->
+                <div class="center-block">
+                    <!-- home subtitle start -->
+                    <h2 class="home-page-title fadeIn-element">
+                        Hơn cả một
+                    </h2><!-- home subtitle end -->
+                    <!-- divider start -->
+                    <div class="inner-divider-half"></div><!-- divider end -->
+                    <!-- home title start -->
+                    <h1 class="home-page-title fadeIn-element">
+                        điểm đến
+                    </h1><!-- home title end -->
+                </div><!-- center block end -->
+            </div><!-- center container end -->
+            <!-- social icons start -->
+            <div class="social-icons-wrapper fadeIn-element">
+                <ul class="social-icons">
+                    <li class="social-icon">
+                        <a class="ion-social-twitter" href="#"></a>
+                    </li>
+                    <li class="social-icon">
+                        <a class="ion-social-facebook" href="#"></a>
+                    </li>
+                    <li class="social-icon">
+                        <a class="ion-social-googleplus" href="#"></a>
+                    </li>
+                    <li class="social-icon">
+                        <a class="ion-social-youtube" href="#"></a>
+                    </li>
+                    <li class="social-icon">
+                        <a class="ion-social-linkedin" href="#"></a>
+                    </li>
+                    <li class="social-icon">
+                        <a class="ion-social-instagram" href="#"></a>
+                    </li>
+                    <li class="social-icon">
+                        <a class="ion-social-pinterest" href="#"></a>
+                    </li>
+                    <li class="social-icon">
+                        <a class="ion-social-dribbble" href="#"></a>
+                    </li>
+                </ul>
+            </div><!-- social icons end -->
+            <!-- scroll indicator start -->
+            <div class="scroll-indicator-wrapper fadeIn-element">
+                <div class="scroll-indicator"></div>
+            </div><!-- scroll indicator end -->
+            <!-- copyright home start -->
+            <div class="copyright-home fadeIn-element">
+                <a class="link-underline" href="#">Zen Group</a> &copy; 2024 All Rights Reserved.
+            </div><!-- copyright home end -->
+        </section><!-- home section end -->
+        <!-- scripts start --> 
+        <script src="js/plugins.js">
+        </script> 
+        <script src="js/journex.js">
+        </script><!-- scripts end -->
+    </body>
 </html>
